infrastructure/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: asyncflow-ingress
  namespace: asyncflow

  labels:
    app.kubernetes.io/name: ingress
    app.kubernetes.io/component: networking
    app.kubernetes.io/part-of: asyncflow-platform
    app.kubernetes.io/managed-by: kubectl

  annotations:

    #
    # AWS Load Balancer Controller
    #
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/load-balancer-name: asyncflow-stage-alb

    alb.ingress.kubernetes.io/group.name: asyncflow

    alb.ingress.kubernetes.io/healthcheck-path: /health/live

    alb.ingress.kubernetes.io/healthcheck-port: traffic-port

    alb.ingress.kubernetes.io/success-codes: "200"

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:

  ingressClassName: alb

  rules:

    - http:

        paths:

          #
          # Frontend
          #
          - path: /

            pathType: Prefix

            backend:

              service:

                name: frontend

                port:

                  number: 80

          #
          # Backend API
          #
          - path: /api

            pathType: Prefix

            backend:

              service:

                name: backend

                port:

                  number: 80

          #
          # Health
          #
          - path: /health/live

            pathType: Prefix

            backend:

              service:

                name: backend

                port:

                  number: 80

          #
          # OpenAPI Docs
          #
          - path: /docs

            pathType: Prefix

            backend:

              service:

                name: backend

                port:

                  number: 80

          #
          # ReDoc
          #
          - path: /redoc

            pathType: Prefix

            backend:

              service:

                name: backend

                port:

                  number: 80
